still having trouble connecting to HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header class="name">Your Name</header>
       <div class ="wrapper">
         <div class="basic" id="basic"> <h1>The Basics</h1>
-          <ul>
+          <ul class="list_class">
 
           </ul>
         </div>
