--- a/index.html
+++ b/index.html
@@ -2,27 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>GitHub VCard</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" href="main.css">
+    <title></title>
   </head>
   <body>
-    <div class ="container">
-      <header class="name">Your Name</header>
-      <div class ="wrapper">
-        <div class="basic" id="basic"> <h1>The Basics</h1>
-          <ul class="list_class">
+      <h1 class="header"></h1>
+    <div class="wrap">
+      <article class="basics">
+      <h2>The Basics</h2>
+      </article>
 
-          </ul>
-        </div>
-        <div class="bio" id="bio"> <h1>The Story</h1>
-          <blockquote>
-          </blockquote>
-        </div>
-      </div>
-      <!-- <div>
-        image
-      </div> -->
+      <article class="story">
+      <h2>The Story</h2>
+
+      </article>
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
