needs work on the CSS

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
       <h1 class="header"></h1>
-    <div class="wrap">
+    <div class="wrapper">
       <article class="basics">
-      <h2>The Basics</h2>
+      <h1>The Basics</h1>
       </article>
 
       <article class="story">
-      <h2>The Story</h2>
+      <h1>The Story</h1>
 
       </article>
     </div>
